@@ -1,3 +1,8 @@
+2005-08-08  Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg.c (_rsvg_handle_get_pixbuf): Un-premultiply ARGB->RGBA instead of going through a PNG stream first
+	* rsvg-cairo-draw.c (rsvg_cairo_get_image_of_node): Ditto
+	
 2005-08-08  Carl Worth  <cworth@cworth.org>
 
 	* rsvg-cairo-draw.c: (_set_source_rsvg_linear_gradient),
